# stress-load-testing-framework

./: .env.example  .gitignore  AUTH_CREDENTIALS_GUIDE.md  CREDENTIALS_SUMMARY.md  Makefile  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  locustfile.py  locustfile_api_stress.py  locustfile_data_query.py  locustfile_high_load.py  locustfile_spike.py  locustfile_ui_flow.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.sh
artifacts/: report_20260311_110038_worker-1.csv  report_20260311_110038_worker-1.json  report_20260311_111021_worker-1.csv  report_20260311_111021_worker-1.json  report_20260312_115014_worker-1.json  report_20260312_115141_worker-1.csv  report_20260312_115141_worker-1.json  report_20260312_120247_worker-1.json  report_20260312_120647_worker-1.csv  report_20260312_120647_worker-1.json  report_20260312_122618_worker-1.csv  report_20260312_122618_worker-1.json  report_20260312_122902_worker-1.json  report_20260312_125152_worker-1.json  report_20260318_102913_worker-1.csv  report_20260318_102913_worker-1.json  report_20260318_110133_worker-1.json  report_20260318_110200_worker-1.csv  report_20260318_110200_worker-1.json  report_20260318_111521_worker-1.json  report_20260402_232352_worker-1.csv  report_20260402_232352_worker-1.json  report_20260402_235042_worker-1.csv  report_20260402_235042_worker-1.json  report_20260402_235123_worker-1.json  report_20260403_000331_worker-1.json  report_20260403_000451_worker-1.csv  report_20260403_000451_worker-1.json  report_20260403_003250_worker-1.csv  (+1 more)
common/: __init__.py  (+3 more)
(+65 files in other folders)
